2008-04-28  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs : Add a few missing static fields.

2008-04-24  Mike Kestner  <mkestner@novell.com>

	* gdk/Window.custom (Destroy): take a normal ref for the native
	method to release, and Dispose our toggle ref.  Fixes #382186.

2008-04-24  Andres G. Aragoneses  <aaragoneses@novell.com>

	* glib/Signal.cs: Remove unneeded cast.

2008-04-24  Andres G. Aragoneses  <aaragoneses@novell.com>

	* atk/Object.custom: custom protected method for firing
	the ChildrenChanged signal.
	* glib/Signal.cs: first implementation of a managed
	method for emitting signals.

2008-04-19  Mike Kestner  <mkestner@novell.com>

	* gtk/glue/statusicon.c: fix time parameter usage.  Not even sure
	how that compiled.  I <3 C.

2008-04-17  Mike Kestner  <mkestner@novell.com>

	* atk/glue/misc.c: glue for vms and singleton setup.
	* atk/Misc.custom: add OnThreadsEnter, OnThreadsLeave, and
	SetSingletonInstance members for Bridge implementors.
	[More of #365437]

2008-04-17  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs: add Harden method to reduce the reflection 
	overhead in Gnome.Program.

2008-04-17  Mike Kestner  <mkestner@novell.com>

	* glib/ToggleRef.cs: Add a Harden method to switch to a standard
	ref and just leak it.
	* gtk/Application.cs: revert the QuitPrepare stuff since it didn't
	always work.

2008-04-17  Mike Kestner  <mkestner@novell.com>

	* gtk/TreeModelAdapter.custom:
	* gtk/TreeModelFilter.custom:
	* gtk/TreeModelSort.custom: reworked patch from Christian Hoff to
	throw NotImplementedException for SetValue methods.  Those should 
	never have been added to the interface, and it's better to throw
	an exception than have infinite recursion kill the program.
	[Fixes #379542]

2008-04-16  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: hide PrintContext.get_CairoContext.
	* gtk/PrintContext.custom: manual get_cairo_context implementation.
	Mono.Cairo assumes it is wrapping owned references, so we need to 