@@ -1,5 +1,10 @@
 2008-04-28  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Value.cs : Add GParam support and beef up the Boxed
+	type marshaling to support types with New methods via reflection.
+
+2008-04-28  Mike Kestner  <mkestner@novell.com>
+
 	* glib/GType.cs : Add a few missing static fields.
 
 2008-04-24  Mike Kestner  <mkestner@novell.com>
